add myself to contributors

--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
   "keywords": [],
   "contributors": [
     "Jeweetzelf (jeweetzelf@pteromanager.ga)",
-    "Dotto (dotto@pteromanager.ga)"
+    "Dotto (dotto@pteromanager.ga)",
+    "Djoh (me@djoh.xyz)"
   ],
   "license": "Apache-2.0",
   "bugs": {
