--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "pteromanager",
   "version": "1.0.0",
   "description": "",
+  "private": false,
   "main": "index.js",
   "scripts": {
     "test": "nodemon tests/index.js"
@@ -10,7 +11,7 @@
     "type": "git",
     "url": "git+https://github.com/PteroManager/PteroManager.git"
   },
-  "keywords": [],
+  "keywords": ["pteromanager", "pterodactyl", "pterodactyl-manager", "api", "api-wrapper"],
   "contributors": [
     "Jeweetzelf (jeweetzelf@pteromanager.ga)",
     "Dotto (dotto@pteromanager.ga)",
@@ -20,7 +21,7 @@
   "bugs": {
     "url": "https://github.com/PteroManager/PteroManager/issues"
   },
-  "homepage": "https://docs.pteromanager.ga/",
+  "homepage": "https://pteromanager.js.org/",
   "dependencies": {
     "@pteromanager/collection": "^1.1.0",
     "axios": "^0.26.1"
