--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "pteromanager",
-  "version": "1.0.0",
+  "version": "0.1.1",
   "description": "",
   "private": false,
   "main": "index.js",
@@ -20,8 +20,7 @@
   ],
   "contributors": [
     "Jeweetzelf (jeweetzelf@pteromanager.ga)",
-    "Dotto (dotto@pteromanager.ga)",
-    "Djoh (me@djoh.xyz)"
+    "Dotto (dotto@pteromanager.ga)"
   ],
   "license": "Apache-2.0",
   "bugs": {
